Fixed the alignment of the <ol> on the search form.

--- a/app/assets/stylesheets/styles/css/freereg_content.css
+++ b/app/assets/stylesheets/styles/css/freereg_content.css
@@ -206,3 +206,8 @@ a:hover.left_tooltip_fading span {
 opacity: 1;
 }
 li#name_input_optional { display: none; visibility: hidden; }
+
+form.formtastic fieldset.inputs ol {
+  margin-right: 20px;
+  margin-left: 0px;
+}
